# MyUtils

./: .gitignore  CMakeLists.txt  chunk.txt
include/: result.hpp  stringforc.h  uresult.hpp
src/: result.cpp  stringforc.c  uresult.cpp
